Fix aligned image overflow on search results

--- a/assets/css/mai-theme.css
+++ b/assets/css/mai-theme.css
@@ -3386,8 +3386,9 @@ img.alignright,
 	border: none;
 }
 
+.archive .content > .entry,
 .blog .content > .entry,
-.archive .content > .entry {
+.search .content > .entry {
 	overflow: hidden;
 }
 
